--- a/lab1-2/makefile
+++ b/lab1-2/makefile
@@ -1,3 +1,5 @@
+commondir = ../common/
+
 all :  lab1-2
 
 lab1-2: lab1-2.c ../common/GL_utilities.c ../common/VectorUtils3.c ../common/LoadTGA.c ../common/loadobj.c ../common/zpr.c ../common/Linux/MicroGlut.c
