start on lab2-2

--- a/lab2/makefile
+++ b/lab2/makefile
@@ -1,7 +1,7 @@
 # set this variable to the director in which you saved the common files
 commondir = ../common/
 
-all : m2-1 m2-1-soft m2-1-gpu
+all : m2-1 m2-1-soft m2-1-gpu m2-2
 
 lab2-1 : skinning.c $(commondir)GL_utilities.c $(commondir)VectorUtils3.c $(commondir)loadobj.c $(commondir)Linux/MicroGlut.c
 	gcc -Wall -o skinning -I$(commondir) -I$(commondir)/Linux -DGL_GLEXT_PROTOTYPES skinning.c $(commondir)GL_utilities.c $(commondir)loadobj.c $(commondir)VectorUtils3.c $(commondir)Linux/MicroGlut.c -lXt -lX11 -lGL -lm
